--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,11 @@
     opacity: 40%;
     background-color: rgb(0, 41, 0);
 }
+
+#completeItems, 
+#incompleteItems{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
